# tarjanize

./: .gitignore  AGENTS.md  CLAUDE.md  COMPILATION_COSTS.md  Cargo.toml  PLAN.md  PLAN_COST_TRACKING.md  PLAN_TARGETS.md  PROBLEMS.md  README.md  TARJAN.md  TODO.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vitest.config.ts
.cargo/: config.toml
crates/cargo-tarjanize/: Cargo.toml  build.rs
crates/cargo-tarjanize/src/: anchors.rs  driver.rs  extract.rs  main.rs  mono_items.rs  orchestrator.rs  path_transform.rs  profile.rs  profile_processing.rs
crates/cargo-tarjanize/tests/: cost_extraction_tests.rs  extraction_tests.rs
crates/cargo-tarjanize/tests/fixtures/anchor_unsafe_impl/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/array_repeat/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/assoc_fn_to_impl/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/assoc_type_constraint/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/async_await/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/async_closure/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/async_closure_nested/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/boxed_slice_type/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/by_use_expr/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/callable_field/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cfg_test_detection/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/closure_captures/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_block/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_expr_arithmetic_in_array/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_expr_in_array_type/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_generic_default_expr/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_initializer/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/const_type/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_async_block/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_async_fn/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_closure/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_closure_in_method/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_closure_internal_struct/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_const_block/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_declarative_macro_fn/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_declarative_macro_struct/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_deeply_nested_fn/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_empty_function/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_from_profile/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_impl_profile_match/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_inline_asm_sym/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_macro_nested_static/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_move_closure/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_multiple_closures/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_multiple_nested_fns/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_nested_closures/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_nested_fn/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_range_pattern_const/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_sum_closures/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_sum_nested/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_thread_local_macro/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_thread_local_raw/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_tracing_callsite/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cost_virtual_workspace/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cross_crate_hyphen_names/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/cross_module_path/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/deeply_nested_generics/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/default_type_param/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/dev_dep_cycle/: Cargo.toml
crates/cargo-tarjanize/tests/fixtures/dyn_multi_trait/: Cargo.toml
crates/tarjanize/: Cargo.toml
crates/tarjanize-condense/: Cargo.toml  README.md
crates/tarjanize-condense/src/: error.rs  lib.rs  rewrite.rs  scc.rs
crates/tarjanize-cost/: Cargo.toml
crates/tarjanize-cost/src/: lib.rs
crates/tarjanize-extract/: Cargo.toml
crates/tarjanize-extract/doc/: rust-analyzer.md
crates/tarjanize-extract/doc/rust-analyzer/: ra_ap_base_db.md  ra_ap_hir.md  ra_ap_ide.md  ra_ap_ide_db.md  ra_ap_load_cargo.md  ra_ap_paths.md  ra_ap_project_model.md  ra_ap_syntax.md  ra_ap_test_fixture.md  usage_patterns.md
crates/tarjanize-extract/src/: crates.rs  dependencies.rs  error.rs  impls.rs  lib.rs  module_defs.rs  modules.rs  paths.rs  workspaces.rs
crates/tarjanize-extract/tests/: integration.rs
crates/tarjanize-magsac/: Cargo.toml
crates/tarjanize-magsac/src/: lib.rs
crates/tarjanize-schedule/: Cargo.toml
crates/tarjanize-schedule/src/: data.rs  export.rs  grouping.rs  heatmap.rs  horizon.rs  lib.rs  recommend.rs  schedule.rs  split.rs  target_graph.rs
crates/tarjanize-schedule/tests/: shatter_scaling.rs
crates/tarjanize-schemas/: Cargo.toml
crates/tarjanize-schemas/proptest-regressions/: symbol_graph.txt
crates/tarjanize-schemas/schemas/: condensed_graph.schema.json  symbol_graph.schema.json
crates/tarjanize-schemas/src/: condensed_graph.rs  cost_model.rs  lib.rs  serde_duration.rs  symbol_graph.rs  testutil.rs
crates/tarjanize-viz/: Cargo.toml  build.rs
crates/tarjanize-viz/src/: data.rs  error.rs  html.rs  lib.rs  schedule.rs  server.rs
crates/tarjanize-viz/templates/: app.html  color.ts  constants.ts  edges.ts  logic.js  logic.ts  renderer.js  renderer.ts  sidebar.ts  style.css  tooltip.ts  tree.ts  viz.html
crates/tarjanize/src/: main.rs
(+372 files in other folders)
