[package]
name = "tarjanize"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.48", features = ["v3"] }
ra_ap_hir = "0.0.316"
ra_ap_ide_db = "0.0.316"
ra_ap_base_db = "0.0.316"
ra_ap_project_model = "0.0.316"
ra_ap_vfs = "0.0.316"
ra_ap_load-cargo = "0.0.316"
ra_ap_paths = "0.0.316"
ra_ap_syntax = "0.0.316"
anyhow = "1.0"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
ra_ap_test_fixture = "0.0.316"
