[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# Internal crates
tarjanize-condense = { path = "crates/tarjanize-condense" }
tarjanize-cost = { path = "crates/tarjanize-cost" }
tarjanize-magsac = { path = "crates/tarjanize-magsac" }
tarjanize-schemas = { path = "crates/tarjanize-schemas" }
tarjanize-schedule = { path = "crates/tarjanize-schedule" }
tarjanize-viz = { path = "crates/tarjanize-viz" }

# Serialization
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", default-features = false, features = [
    "tracing",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Time formatting
jiff = "0.2"

# Algorithms and data structures
indexmap = "2.13"
itertools = "0.14"
petgraph = "0.8"

# Cargo/rustc integration
analyzeme = "12.0"
cargo_metadata = "0.23"
regex = "1.11"
tempfile = "3"

# Web server
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
open = "5"

# Performance
mimalloc = { version = "0.1", features = ["v3"] }

# Testing
http = "1"
http-body-util = "0.1"
proptest = "1.9"
tower = { version = "0.5", features = ["util"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mergeconflict/tarjanize"
keywords = ["rust", "analyzer", "crate", "splitting", "build-time"]
categories = ["development-tools"]

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

# Project-specific opt-outs
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
