[package]
name = "cargo-tarjanize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Extract symbol graphs from Rust workspaces using rustc"

[lints]
workspace = true

# Tell rust-analyzer this crate uses rustc_private.
# This enables IDE support for rustc internal crates.
[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-tarjanize"
path = "src/main.rs"

[dependencies]
tarjanize-schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo_metadata.workspace = true
tempfile.workspace = true
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
analyzeme.workspace = true
