[package]
name = "tarjanize-condense"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Compute SCCs and condense symbol graphs into DAGs"

[lints]
workspace = true

[dependencies]
tarjanize-schemas.workspace = true
indexmap.workspace = true
petgraph.workspace = true
serde_json.workspace = true
tracing.workspace = true
