[package]
name = "tarjanize-cost"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Compute critical path and other cost metrics for symbol graphs"

[lints]
workspace = true

[dependencies]
tarjanize-schemas.workspace = true
tarjanize-magsac.workspace = true
indexmap.workspace = true
jiff.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
