[package]
name = "tarjanize-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Symbol graph extraction from Rust workspaces using rust-analyzer"

[lints]
workspace = true

[dependencies]
anyhow = "1"
tarjanize-schemas = { path = "../tarjanize-schemas" }
ra_ap_hir = "0.0.317"
ra_ap_ide = "0.0.317"
ra_ap_ide_db = "0.0.317"
ra_ap_base_db = "0.0.317"
ra_ap_project_model = "0.0.317"
ra_ap_load-cargo = "0.0.317"
ra_ap_paths = "0.0.317"
ra_ap_syntax = "0.0.317"
camino = "1.2"
either = "1"
serde_json = "1.0"
tracing = "0.1"
rayon = "1.11"

[dev-dependencies]
ra_ap_test_fixture = "0.0.317"
