[package]
name = "tarjanize-magsac"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MAGSAC++ robust estimator for two-variable, no-intercept models"
readme = "../../README.md"

[dependencies]

[lints]
workspace = true
