[package]
name = "tarjanize-schedule"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Build schedule computation: forward/backward DP, critical path, swim lanes"

[lints]
workspace = true

[dependencies]
tarjanize-cost.workspace = true
tarjanize-schemas.workspace = true
indexmap.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
