[package]
name = "tarjanize-schemas"
version.workspace = true
edition.workspace = true
description = "Schema definitions for tarjanize output formats"

[dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"
tracing = "0.1"
