[package]
name = "tarjanize-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Schema definitions for tarjanize output formats"

[lints]
workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
