[package]
name = "tarjanize-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Schema definitions for tarjanize output formats"

[lints]
workspace = true

[dependencies]
ts-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

[dev-dependencies]
proptest.workspace = true
