[package]
name = "tarjanize-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Interactive HTML build schedule visualization for tarjanize"

[lints]
workspace = true

[dependencies]
tarjanize-schemas.workspace = true
askama.workspace = true
indexmap.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
