[package]
name = "tarjanize-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Interactive HTML build schedule visualization for tarjanize"

[lints]
workspace = true

[dependencies]
tarjanize-cost.workspace = true
tarjanize-schedule.workspace = true
tarjanize-schemas.workspace = true
axum.workspace = true
serde.workspace = true
open.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_with.workspace = true

[dev-dependencies]
http.workspace = true
http-body-util.workspace = true
tower.workspace = true
