[package]
name = "tarjanize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Analyze Rust workspace dependencies to identify crate splitting opportunities"

[lints]
workspace = true

[dependencies]
tarjanize-condense.workspace = true
tarjanize-cost.workspace = true
mimalloc.workspace = true
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
