# Test fixture for dev-dependency cycles.
#
# This workspace has a cycle caused by dev-dependencies:
# - crate_a has a dev-dependency on crate_b
# - crate_b has a normal dependency on crate_a
#
# This is valid for Cargo (dev-deps can create cycles).
# cargo-tarjanize analyzes all targets (--all-targets), so both
# the lib target and test target of crate_a are analyzed.

[workspace]
members = ["crates/crate_a", "crates/crate_b"]
resolver = "2"
