# Test fixture for dev-dependency cycles.
#
# This workspace has a cycle caused by dev-dependencies:
# - crate_a has a dev-dependency on crate_b
# - crate_b has a normal dependency on crate_a
#
# This is valid for Cargo (dev-deps can create cycles), but rust-analyzer
# will skip the cyclic edge when building the crate graph.

[workspace]
members = ["crates/crate_a", "crates/crate_b"]
resolver = "2"
